2004-03-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* README(.ja), INSTALL(.ja),
	  doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/ja_JP.ujis/README.m2m: Update

2004-03-01  Saito <saito@intaa.net>

	* timidity/w32g_subwin3.c:
	  Fix Win32GUI tracer window.

2004-02-29  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc2

2004-02-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/ja_JP.ujis/README.dl:
	  Was written in iso-2022-jp, convert to eucJP
	* doc/C/README.mts, doc/ja_JP.ujis/README.mts: Add
	* doc/C/Makefile.{am,in}, doc/ja_JP.ujis/Makefile.{am,in}:
	  Fix to fit with change above

2004-02-29  Saito <saito@intaa.net>

	* interface/w32g_tracer.bmp:
	  Fix.
	* timidity/playmidi.c:
	  Fix sostenuto and redamper.

2004-02-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* AUTHORS: Update
	* interface/Makefile.{am,in}: Fix due to make dist
	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* doc/m2m.txt: Move to doc/C/README.m2m
	* doc/ja_JP.ujis/README.m2m: Add
	* doc/Makefile.{am,in}, doc/C/Makefile.{am,in},
	  doc/ja_JP.ujis/Makefile.{am,in}: Fix to fit with change above
	* script/Makefile.{am,in}, script/lspatch.pl: Fix a little

2004-02-28  Saito <saito@intaa.net>

	* interface/w32g_i.c, interface/w32g.h:
	  Fix about Win32 GUI.
	* interface/w32g_icon.ico:
	  Fix large icon.
	* timidity/readmidi.c, timidity/playmidi.c, timidity/reverb.[ch]:
	  Fix around effects.

2004-02-27  Takashi Iwai <tiwai@suse.de>

	* interface/Makefile.am, interface/interface_[Ak].txt:
	  Added the missing text files for interface A and k.

2004-02-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* script/lspatch.pl: Fix to fit with new patch options
	* timidity/instrum.c: Fix a little

2004-02-26  Saito <saito2@digitalme.com>

	* timidity/instrum.[ch], timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/mix.c: